add bonus (title and bg color)

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -18,7 +18,9 @@
 
 <body>
     <!-- HEADER -->
-  <header class="text-center text-white"><h1>FizzBuzzDom</h1></header>
+  <header class="text-center text-white">
+    <h1>FizzBuzzDOM</h1>
+  </header>
   <!-- /HEADER -->
 
   <!-- MAIN -->
