--- a/bonus/index.html
+++ b/bonus/index.html
@@ -24,7 +24,9 @@
   <!-- /HEADER -->
 
   <!-- MAIN -->
-  <main></main>
+  <main>
+    <div class="container"></div>
+  </main>
   <!-- /MAIN -->
 
   <!-- FOOTER -->
