--- a/bonus/index.html
+++ b/bonus/index.html
@@ -25,7 +25,9 @@
 
   <!-- MAIN -->
   <main>
-    <div class="container"></div>
+    <div class="container">
+
+    </div>
   </main>
   <!-- /MAIN -->
 
